--- a/my-app/src/components/Spectrogram.css
+++ b/my-app/src/components/Spectrogram.css
@@ -4,3 +4,9 @@ canvas {
     background-position: center center;
     padding: 5px;
 }
+
+@media (max-width: 696px) {
+    canvas {
+      display: none;
+    }
+  }
