--- a/my-app/src/components/BallPlayer.css
+++ b/my-app/src/components/BallPlayer.css
@@ -3,7 +3,7 @@
     border-radius: 20px;
     padding: 24px;
     margin: auto;
-    color: #000000;
+    color: #ffffff;
     background-color: #5050505a;
     text-align: center
   }
