--- a/my-app/src/components/AddBall.css
+++ b/my-app/src/components/AddBall.css
@@ -20,17 +20,14 @@
   .coordinates {
     position: fixed;
     bottom: 300px;
-    right: calc(var(--spacer)*2);
+    right: var(--spacer5);
     display: flex;
     align-items: center;
     justify-content: center;
-  }
-  
-  .coordinates {
     font-size: 16px;
     font-weight: bold;
-    margin-right: 10px;
   }
+
   
   .coordinates .inputs {
     display: flex;
@@ -38,7 +35,7 @@
   }
   
   .coordinates input {
-    width: 60px;
+    width: 30px;
     height: 30px;
     margin-right: 10px;
     border: none;
