--- a/my-app/src/components/Info.css
+++ b/my-app/src/components/Info.css
@@ -1,8 +1,8 @@
 /* Info.css */
 .info-container {
   position: fixed;
-  top: 120px;
-  right: 20px;
+  bottom: 120px;
+  right: var(--spacer3);
   z-index: 100;
 }
 
