--- a/my-app/src/components/ThemeButton.css
+++ b/my-app/src/components/ThemeButton.css
@@ -1,7 +1,7 @@
 .theme-button {
     position: fixed;
-    top: 60px;
-    right: 20px;
+    bottom: 60px;
+    right: var(--spacer3);
     display: flex;
     align-items: center;
     justify-content: center;
