--- a/my-app/src/components/Toolbar.css
+++ b/my-app/src/components/Toolbar.css
@@ -47,11 +47,11 @@
   }
 
   .button_play_pause:hover {
-    background-color: #0062cc;
+    background-color: #008080;
   }
 
   .button_stop:hover {
-    background-color: #0062cc;
+    background-color: #008080;
   }
 
   .button_icon_path {
